// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders with heading and a button 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 1.5rem;
  font-weight: 700;
  line-height: 1.25;
  margin-bottom: calc(1.5rem * 0.5);
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  grid-gap: 0.75rem;
  grid-template-columns: minmax(auto,100%) repeat(1,auto);
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.5rem;
  height: 2.5rem;
  font-size: 0.875rem;
  background-color: #081D17;
  color: #C0F9DA;
  border: 1px solid transparent;
}

.emotion-6:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-6:enabled {
  cursor: pointer;
}

.emotion-6 i {
  vertical-align: middle;
}

.emotion-6:hover:enabled {
  background-color: #000;
}

.emotion-6:active:enabled {
  background-color: #134537;
}

.emotion-6:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  visibility: visible;
}

.emotion-2 {
  margin-left: 0;
  margin-right: 0;
  vertical-align: middle;
}

<header
  className="emotion-8 emotion-9"
  display="grid"
>
  <h1
    className="emotion-0 emotion-1"
    color="text.dark"
    fontSize="size7"
    fontWeight="bold"
  >
    My Heading
  </h1>
  <button
    className="button--primary emotion-6 emotion-7"
    disabled={false}
    size="large"
  >
    <div
      className="loadedContent"
    />
    <div
      className="emotion-4 emotion-5"
    >
      <span
        className="emotion-2 emotion-3"
      >
        Primary
      </span>
    </div>
  </button>
</header>
`;

exports[`<Header /> renders with heading and no buttons 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  grid-gap: 0.75rem;
  grid-template-columns: minmax(auto,100%);
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 1.5rem;
  font-weight: 700;
  line-height: 1.25;
  margin-bottom: calc(1.5rem * 0.5);
}

<header
  className="emotion-2 emotion-3"
  display="grid"
>
  <h1
    className="emotion-0 emotion-1"
    color="text.dark"
    fontSize="size7"
    fontWeight="bold"
  >
    My Heading
  </h1>
</header>
`;

exports[`<Header /> renders with heaeding and multiple buttons 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 1.5rem;
  font-weight: 700;
  line-height: 1.25;
  margin-bottom: calc(1.5rem * 0.5);
}

.emotion-12 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.5rem;
  height: 2.5rem;
  font-size: 0.875rem;
  background-color: #081D17;
  color: #C0F9DA;
  border: 1px solid transparent;
}

.emotion-12:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-12:enabled {
  cursor: pointer;
}

.emotion-12 i {
  vertical-align: middle;
}

.emotion-12:hover:enabled {
  background-color: #000;
}

.emotion-12:active:enabled {
  background-color: #134537;
}

.emotion-12:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  visibility: visible;
}

.emotion-2 {
  margin-left: 0;
  margin-right: 0;
  vertical-align: middle;
}

.emotion-14 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  grid-gap: 0.75rem;
  grid-template-columns: minmax(auto,100%) repeat(2,auto);
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.5rem;
  height: 2.5rem;
  font-size: 0.875rem;
  background-color: #FFFFFF;
  color: #25272D;
  border: 1px solid transparent;
}

.emotion-6:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-6:enabled {
  cursor: pointer;
}

.emotion-6 i {
  vertical-align: middle;
}

.emotion-6 i {
  color: #989A9C;
}

.emotion-6:enabled {
  border: 1px solid #E0E1E2;
}

.emotion-6:hover:enabled {
  border: 1px solid #5B5D61;
}

.emotion-6:hover:enabled i {
  color: #081D17;
}

.emotion-6:active:enabled {
  color: #081D17;
  background-color: #F2F2F2;
}

.emotion-6:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

<header
  className="emotion-14 emotion-15"
  display="grid"
>
  <h1
    className="emotion-0 emotion-1"
    color="text.dark"
    fontSize="size7"
    fontWeight="bold"
  >
    My Heading
  </h1>
  <button
    className="button--secondary emotion-6 emotion-7"
    disabled={false}
    size="large"
  >
    <div
      className="loadedContent"
    />
    <div
      className="emotion-4 emotion-5"
    >
      <span
        className="emotion-2 emotion-3"
      >
        Secondary
      </span>
    </div>
  </button>
  <button
    className="button--primary emotion-12 emotion-7"
    disabled={false}
    size="large"
  >
    <div
      className="loadedContent"
    />
    <div
      className="emotion-4 emotion-5"
    >
      <span
        className="emotion-2 emotion-3"
      >
        Primary
      </span>
    </div>
  </button>
</header>
`;
